--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 <div class="container">
-  <div class="jumbotron" style="background-color:#1daeff !important;">
-    <h2 style="color:#fff;">Gender Classifier</h2>      
+  <div class="jumbotron" style="background-color:gray !important;">
+    <h2 style="color:#fff;">Gender Classifier Web Implementation</h2>      
     <p style="color:#fff;">Using Machine Learning to Classify Gender</p>
   </div>
   <p>ML App.</p>           
@@ -12,7 +12,7 @@
 
 <div class="panel-group">
     <div class="panel panel-primary">
-      <div class="panel-heading" style="background-color:#1563ff ">Gender Classifier</div>
+      <div class="panel-heading" style="background-color:green ">Gender Classifier</div>
       <div class="panel-body">
       
 <!-- Main Input For Receiving Query to our ML -->	
