--- a/templates/results.html
+++ b/templates/results.html
@@ -4,7 +4,7 @@
 
 
 <div class="container">
-  <div class="jumbotron" style="background-color:#1daeff !important;">
+  <div class="jumbotron" style="background-color:gray !important;">
     <h2 style="color:#fff;">Gender Classifier</h2>      
     <p style="color:#fff;">Using Machine Learning to Classify Gender</p>
   </div>
@@ -12,10 +12,10 @@
 </div>
 
 <div class="card text-center">
-  <div class="card-header">
+  <div class="card-header btn btn-primary">
     Results
   </div>
-  <div class="card-body" style="background-color:#1daeff;">
+  <div class="card-body" style="background-color:whitesmoke;">
     <h5 class="card-title">Gender Classifier</h5>
     <hr/>
     <p class="card-text"><div class="alert alert-danger" role="alert">
@@ -36,11 +36,19 @@
     {% endif%}
   </div>
 
+  <div class="btn btn-link" style="margin-top:10px; " >
+  
+  <a href="{{url_for('index')}}">
+    Predict Again
+  </a>
+</div>
+
 <!-- Main ML Prediction Display Ends Here -->
   <div class="card-footer text-muted">
    
   </div>
 </div>
+
 
 
 {% endblock %}
