--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
       
 <!-- Main Input For Receiving Query to our ML -->	
       	<form action="{{ url_for('predict')}}" method="POST">
-			<input type="text" name="namequery">
+			<input type="text" name="namequery" placeholder="Type a name ">
 			<button type="submit" class="btn btn-primary">Predict</button>
 			</form>
 
